# seedrecommandation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/raw/: farmer_context.csv  location_profiles.csv  seed_availability.csv  seed_varieties.csv
docs/: DATA_DICTIONARY.md  METHODOLOGY.md  TODO.md
models/: seedrec_pipeline.joblib
reports/: evaluation_metrics.json  evaluation_summary.docx  explanation_report.md  fairness_resource_level.csv  fairness_zone.csv  feature_importance.csv  group_summary.csv  sample_recommendations.csv
src/seedrec/: __init__.py  config.py  data.py  evaluate.py  explain.py  model.py  pipeline.py  prepare_real_data.py  recommend.py  seasons.py  validation.py
src/seedrec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_recommendations.py
